Fix FAB spacing

--- a/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
+++ b/src/Edukodas/Bundle/TemplateBundle/Resources/public/sass/main.scss
@@ -92,7 +92,7 @@ textarea#edukodas_bundle_statisticsbundle_pointhistory_comment {
   li {
     margin: 0 2px;
   }
-  right: 50px;
+  right: 46px;
 }
 
 // Task list
